Moved to a proper index file.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ Files/
 *.webp
 *.csv
 
+boilerplate.htm
+boilerplate00.htm
+boilerplate01.htm
+boilerplate02.htm
+boilerplate03.htm
+boilerplate04.htm
+boilerplate05.htm
 
 jsonQ.min.js
 Skeleton-2.0.4
